lab-3/deployment/deployment_1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend-master
  labels:
    app: chat
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: chat/backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3400
          name: ws-port
---
apiVersion: v1
kind: Service
metadata:
  name: chat-backend-master
  labels:
    app: backend
spec:
  type: NodePort
  ports:
  - port: 3400
    targetPort: ws-port
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  labels:
    app: chat
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: chat/frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 4000
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.chat-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-backend-master
                port:
                  number: 3400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chat-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-frontend
                port: 
                  number: 4000
